Add styling to the handlebars

--- a/src/main/resources/templates/squad-form.hbs
+++ b/src/main/resources/templates/squad-form.hbs
@@ -18,7 +18,7 @@
         </form>
     {{else}}
         <h1>Add a new squad!</h1>
-        <form class="form" action="/categories" method="post">
+        <form class="form" action="/squads" method="post">
             <div class="form-group">
                 <label for="name">Squad Name:</label>
                 <input id="name" class="form-control" name="name" type="text">
