--- a/src/main/resources/templates/hero-detail.hbs
+++ b/src/main/resources/templates/hero-detail.hbs
@@ -8,8 +8,10 @@
 
     <div class="row">
         <div class="col-md-12">
-            <a class="btn btn-info" href="/tasks/{{task.id}}/edit">Edit this task</a><br>
-            <a class="btn btn-info" href="/categories/{{task.categoryId}}/tasks/{{task.id}}/delete">DELETE this task</a>
+            <div class = "col-md-12">
+                <a class="btn btn-info" href="/tasks/{{task.id}}/edit">Edit this task</a>
+                <a class="btn btn-info" href="/categories/{{task.categoryId}}/tasks/{{task.id}}/delete">DELETE this task</a>
+            </div>
         </div>
     </div>
 
