--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -7,21 +7,21 @@
 <body>
 <ul class="nav nav-tabs">
     <li role="presentation" class="active"><a href="/">Home</a></li>
-    <li role="presentation"><a href="/tasks/new">Add a New Task</a></li>
+    <li role="presentation"><a href="/heroes/new">Add a New Task</a></li>
 
     <li role="presentation" class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
             Category Menu <span class="caret"></span>
         </a>
         <ul class="dropdown-menu">
-            {{#if categories}}
-                {{#each categories}}
+            {{#if squads}}
+                {{#each squads}}
                     <li><a href="/categories/{{id}}">{{name}}</a></li>
                 {{/each}}
-                <li><a href="/categories/new">Add a Category</a></li>
+                <li><a href="/squads/new">Add a Squad</a></li>
 
             {{else}}
-                <li><a href="/categories/new">Add a Category</a></li>
+                <li><a href="/squads/new">Add a Squad</a></li>
             {{/if}}
         </ul>
     </li>
@@ -30,7 +30,7 @@
     <!--begin main template-->
     <div class="page-header">
         <img src="/images/rawpixel-com-296621.png" width="70%" alt="https://unsplash.com/search/task?photo=Lh_bn9SgRSY">
-        <h1>Welcome to my To Do List. <small>Let's be organized, focused, and efficient.</small></h1>
+        <h1>Welcome to my Hero Squad. <small>Let's be organized, focused, and efficient.</small></h1>
     </div>
 
     <div class="row">
