--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -2,30 +2,45 @@
 <html>
 <head>
     <title>{{#block "title"}}Blog{{/block}}</title>
-    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 </head>
 <body>
-<ul class="nav nav-tabs">
-    <li role="presentation" class="active"><a href="/">Home</a></li>
-    <li role="presentation"><a href="/heroes/new">Add a New Task</a></li>
+<nav class="navbar navbar-dark bg-primary" >
+    <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+        <div  class="navbar-header">
+            <button  type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span style = "float: right" class = "btn btn-default" style = "color: white" >Toggle</span>
+            </button>
+            <a style = "color: white" class="navbar-brand" href="#">HOME</a>
+        </div>
 
-    <li role="presentation" class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-            Category Menu <span class="caret"></span>
-        </a>
-        <ul class="dropdown-menu">
-            {{#if squads}}
-                {{#each squads}}
-                    <li><a href="/categories/{{id}}">{{name}}</a></li>
-                {{/each}}
-                <li><a href="/squads/new">Add a Squad</a></li>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="active"><a style = "color: white" href="/">View Heroes<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a style = "color: white" href="/heroes/new">Add new hero<span class="sr-only">(current)</span></a></li>
+                <li class="dropdown">
+                    <a style = "color: white" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Squads Menu <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        {{#if squads}}
+                            {{#each squads}}
+                                <li><a href="/categories/{{id}}">{{name}}</a></li>
+                            {{/each}}
+                            <li><a href="/squads/new">Add a Squad</a></li>
 
-            {{else}}
-                <li><a href="/squads/new">Add a Squad</a></li>
-            {{/if}}
-        </ul>
-    </li>
-</ul>
+                        {{else}}
+                            <li><a href="/squads/new">Add a Squad</a></li>
+                        {{/if}}
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
 <div class="container">
     <!--begin main template-->
     <div class="page-header">
