Add header to layout.hbs

--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -47,7 +47,22 @@
         <img src="/images/rawpixel-com-296621.png" width="70%" alt="https://unsplash.com/search/task?photo=Lh_bn9SgRSY">
         <h1>Welcome to my Hero Squad. <small>Let's be organized, focused, and efficient.</small></h1>
     </div>
-
+    <header>
+        <div class="view intro-2">
+            <div class="full-bg-img">
+                <div class="mask rgba-black-strong flex-center">
+                    <div class="container">
+                        <div class="white-text text-center wow fadeInUp">
+                            <h2>Welcome to my Hero Squad App.</h2>
+                            <h5>Let's be organized, focused, and efficient.</h5>
+                            <br>
+                            <p>Add your hero and hero squad to the list. You can also look around to explore existing heroes and squads.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
     <div class="row">
         <div class = "col-md-6"></div>
         <div class = "col-md-6">
