--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html>
-<link>
+<head>
+
     <title>{{#block "title"}}Blog{{/block}}</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" href="app.css"/>
 </head>
 <body>
+<style>
+    .intro-2 {
+        background: url("https://mdbootstrap.com/img/Photos/Others/img (51).jpg") rgba(0, 0, 0, 0.5) no-repeat center center;
+        background-size: cover;
+        text-align: center;
+        color: white;
+        background-blend-mode: multiply;
+    }
+    .view {
+        margin-top: -20px;
+    }
+    .navbar {
+        z-index: 1;
+    }
+    .view {
+        height: 30vh;
+    }
+</style>
 <header>
     <nav class="navbar navbar-dark bg-primary" >
         <div class="container-fluid">
