--- a/src/main/resources/templates/hero-form.hbs
+++ b/src/main/resources/templates/hero-form.hbs
@@ -8,7 +8,7 @@
             </div>
             <div class="form-group">
                 <label for="age">Edit this hero's age:</label>
-                <input id="age" name="age" class="form-control" type="text" value="{{hero.age}}">
+                <input id="age" name="age" class="form-control" type="number" value="{{hero.age}}">
             </div>
             <div class="form-group">
                 <label for="specialPower">Edit this hero's special Power:</label>
@@ -20,11 +20,16 @@
             </div>
             <div class="form-group">
                 <label for="squadId">Update this hero's squad:</label>
-                <select id="squadId" name="squadId" class="form-control">
-                    {{#each squads}}
-                        <option value="{{id}}">{{name}}</option>
-                    {{/each}}
-                </select>
+                {{#if squadsWithSpace}}
+                    <select id="squadId" name="squadId" class="form-control">
+                        {{#each squadsWithSpace}}
+                            <option value="{{id}}">{{name}}</option>
+                        {{/each}}
+                    </select>
+                    <p>Don't see the right squad?<a href="/squads/new">Add a new one first.</a></p>
+                {{else}}
+                    <p>All squads are full if you would like to change? <a href="/squads/new">Add a new one first.</a></p>
+                {{/if}}
             </div>
             <p>Don't see the right squad?<a href="/squads/new">Add a new one first.</a></p>
             <button type="submit" class="btn btn-default">Go!</button>
@@ -40,7 +45,7 @@
                     </div>
                     <div class="form-group">
                         <label for="age">Edit this hero's age:</label>
-                        <input id="age" name="age" class="form-control" type="text" value="{{hero.age}}" required>
+                        <input id="age" name="age" class="form-control" type="number" value="{{hero.age}}" required>
                     </div>
                     <div class="form-group">
                         <label for="specialPower">Edit this hero's special Power:</label>
