--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -48,7 +48,7 @@
                         <ul class="dropdown-menu">
                             {{#if squads}}
                                 {{#each squads}}
-                                    <li><a href="/categories/{{id}}">{{name}}</a></li>
+                                    <li><a href="/squads/{{id}}">{{name}}</a></li>
                                 {{/each}}
                                 <li><a href="/squads/new">Add a Squad</a></li>
 
