--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-
     <title>{{#block "title"}}Blog{{/block}}</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -17,7 +16,8 @@
         background-blend-mode: multiply;
     }
     .view {
-        margin-top: -20px;
+        margin-top: 50px;
+        padding-top: 20px;
     }
     .navbar {
         z-index: 1;
@@ -27,7 +27,7 @@
     }
 </style>
 <header>
-    <nav class="navbar navbar-dark bg-primary" >
+    <nav class="navbar navbar-fixed-top navbar-dark bg-primary" >
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div  class="navbar-header">
@@ -78,12 +78,13 @@
 </header>
 <div class="container">
     <!--begin main template-->
-    <div class="row">
-        <div class = "col-md-6"></div>
-        <div class = "col-md-6">
+    <div class="row ">
+        <div class="col-md-2"></div>
+        <div class = "col-md-8">
             {{#block "content"}}
             {{/block}}
         </div>
+        <div class="col-md-2"></div>
     </div>
 </div>
 <!--end main template-->
