--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -15,6 +15,10 @@
         color: white;
         background-blend-mode: multiply;
     }
+    .hero-card:hover {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+     }
+    .hero-card a:hover, a:active {color: red;}
     .view {
         margin-top: 50px;
         padding-top: 20px;
