--- a/src/main/resources/templates/hero-form.hbs
+++ b/src/main/resources/templates/hero-form.hbs
@@ -1,6 +1,8 @@
 {{#partial "content"}}
     {{#if editHero}}
-        <h1>Edit this Hero!</h1>
+        <div style="color:purple; text-align: center;">
+            <h1>Edit this Hero!</h1>
+        </div>
         <form class="form" action="/heroes/{{hero.id}}" method="post">
             <div class="form-group">
                 <label for="name">Edit this hero's name:</label>
@@ -52,7 +54,9 @@
             <button type="submit" class="btn btn-default">Go!</button>
         </form>
     {{else}}
-        <h2>Add a new Hero!</h2>
+        <div style="color:purple; text-align:center;">
+            <h2>Add a new Hero!</h2>
+        </div>
         <form class="form" action="/heroes" method="post">
             {{#if squads}}
                 {{#if squadsWithSpace}}
