Add styling to header texts of each handlebar

--- a/src/main/resources/templates/hero-detail.hbs
+++ b/src/main/resources/templates/hero-detail.hbs
@@ -9,8 +9,8 @@
     <div class="row">
         <div class="col-md-12">
             <div class = "col-md-12">
-                <a class="btn btn-info" href="/heroes/{{hero.id}}/edit">Edit this task</a>
-                <a class="btn btn-info" href="/squads/{{hero.squadId}}/heroes/{{hero.id}}/delete">DELETE this task</a>
+                <a class="btn btn-info" href="/heroes/{{hero.id}}/edit">Edit this hero</a>
+                <a class="btn btn-info" href="/squads/{{hero.squadId}}/heroes/{{hero.id}}/delete">DELETE this hero</a>
             </div>
         </div>
     </div>
