--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -1,6 +1,7 @@
 {{#partial "content"}}
-     <h1> List of Heroes</h1>
-
+     <div style="color:purple; font-family:Serif; text-align:center">
+         <h1> List of Heroes</h1>
+     </div>
     {{#if heroes}}
         {{#each heroes }}
             <div class="card hero-card" style="margin: 20px; background-color:#eee; text-align:center; padding-top:10px; padding-bottom:10px;">
