Add a predefined maximum size to squad class and remove all entries of maximum size in tests squad dao handlebars forms and app.java

--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -7,7 +7,7 @@
             <div class="card hero-card" style="margin: 20px; background-color:#eee; text-align:center; padding-top:10px; padding-bottom:10px;">
                 <a href="/squads/{{squadId}}/heroes/{{id}}">
                     <div class="card-body">
-                        <p>{{name}}</p>
+                        <p style="font-family:san Serif; font-size:18px; text-align:center">{{name}}</p>
                     </div>
                 </a>
             </div>
