Add a text to the layout in header that states that each squad has a predefined limit of 10 heroes

--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -95,7 +95,7 @@
                 <div class="container">
                     <div class="white-text text-center wow fadeInUp">
                         <h2>Welcome to my Hero Squad App.</h2>
-                        <h5>Let's be organized, focused, and efficient.</h5>
+                        <h3>All squads have a predefined limit of 10 heroes!!</h3>
                         <br>
                         <p>Add your hero and hero squad to the list. You can also look around to explore existing heroes and squads.</p>
                     </div>
