--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -10,49 +10,8 @@
             integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
             crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="app.css"/>
+    <link rel="stylesheet" href="/app.css"/>
 </head>
-<style>
-    html, body{
-        overflow-x: hidden;
-    }
-    .intro-2 {
-        background: url("https://mdbootstrap.com/img/Photos/Others/img (51).jpg") rgba(0, 0, 0, 0.5) no-repeat center center;
-        background-size: cover;
-        text-align: center;
-        color: white;
-        background-blend-mode: multiply;
-    }
-    .hero-card:hover {
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-     }
-    a:hover {
-        text-decoration: none;
-    }
-    .view {
-        margin-top: 50px;
-        padding-top: 20px;
-    }
-    .navbar {
-        z-index: 1;
-    }
-    .view {
-        height: 40vh;
-    }
-    div.polaroid {
-        margin-bottom: 20px;
-        maximum-width: 100%;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    }
-
-    div.container {
-        padding: 10px;
-    }
-    .card-footer{
-        background-color: black;
-        padding-bottom: 20%;
-    }
-</style>
 <body>
 <header>
     <nav class="navbar navbar-fixed-top navbar-dark bg-primary" >
